--- a/scottish_gems/templates/scottish_gems/index.html
+++ b/scottish_gems/templates/scottish_gems/index.html
@@ -20,6 +20,8 @@
                             </div>
                             <a href="#" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
+                                <p  class="card-text">{{post.excerpt}}</p>
+                                <img class="card-image" src="{{post.image}}" alt="{{post.image}}">
                             </a>
 
                             <hr />
