--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
-
+                    <li>
+                        <a class="nav-link {% if request.path == '/signup/' %}active{% endif %}" href="{% url 'signup' %}">Sign Up</a>
+                    </li>
                 </ul>
                 <span class="navbar-text text-muted">
                     Rannsaich Dìomhaireachd na h-Alba
