signup.html(transform signup.html to signup_login.html)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,3 +164,12 @@ body {
 .approval {
     color: rgb(222, 146, 168);
 }
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-wrapper {
+    width: 45%;
+}
