--- a/templates/accounts/signup_login.html
+++ b/templates/accounts/signup_login.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="form-container">
+<class="form-container">
     <div class="form-wrapper">
         <h2>Sign Up</h2>
-        <form method="post">
+    </div>
+
+    <div class="Signup-form-content">
+        <form class="signup signup-form" id="signup_form" method="post">
             {% csrf_token %}
             {{ signup_form.as_p }}
             <button type="submit" name="signup">Sign up</button>
@@ -19,5 +22,5 @@
             <button type="submit" name="login">Login</button>
         </form>
     </div>
-</div>
+</class=>
 {% endblock %}
