--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li>
-                        <a class="nav-link {% if request.path == '/signup_login/' %}active{% endif %}" href="{% url 'signup_login' %}">Sign Up/Log In</a>
+                        <a class="nav-link {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}">Log In</a>
                     </li>
                 </ul>
                 <span class="navbar-text text-muted">
