--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="form-container">
+<class="form-container">
     <div class="form-wrapper">
         <h2>Login</h2>
         <form method="post">
@@ -10,6 +10,7 @@
             <button type="submit" name="login">Login</button>
             <h6>Do not have an account? Please us our <a class="nav-link {% if request.path == '/signup' %}active{% endif %}" href="{% url 'signup' %}">signup-form</a></h6>
         </form>
+        </form>
     </div>
-</section>
+</class>
 {% endblock %}
