--- a/templates/base.html
+++ b/templates/base.html
@@ -1,97 +1,127 @@
-{% load static %}
-
-{% url 'home' as home_url %}
+{% load static %} {% url 'home' as home_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
-
-<head>
+  <head>
     <title>Scottish Gems</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Fonts CSS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  </head>
 
-</head>
-
-<body class="d-flex flex-column h-100 main-bg">
-
+  <body class="d-flex flex-column h-100 main-bg">
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><span>Scottish Gems </span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}"
+          ><span>Scottish Gems </span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
-                </li>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link {% if request.path == home_url %}active{% endif %}"
+                aria-current="page"
+                href="{% url 'home' %}"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Region Selection
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                    <a class="nav-link {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}">Log In</a>
+                  <a class="dropdown-item" href="#">Edinburgh, Fife and East</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Region Selection
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Edinburgh, Fife and East</a></li>
-                        <li><a class="dropdown-item" href="#">Glasgow & West</a></li>
-                        <li><a class="dropdown-item" href="#">Highlands & Islands</a></li>
-                        <li><a class="dropdown-item" href="#">Grampian</a></li>
-                        <li><a class="dropdown-item" href="#">South</a></li>
-                        <li><a class="dropdown-item" href="#">Tayside & Central</a></li>
-                        <!-- Add more regions as needed -->
-                    </ul>
+                <li><a class="dropdown-item" href="#">Glasgow & West</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Highlands & Islands</a>
                 </li>
-            </ul>
+                <li><a class="dropdown-item" href="#">Grampian</a></li>
+                <li><a class="dropdown-item" href="#">South</a></li>
+                <li><a class="dropdown-item" href="#">Tayside & Central</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
-                <span class="navbar-text text-muted">
-                    Rannsaich Dìomhaireachd na h-Alba
-                </span>
-            </div>
-        </div>
+      </div>
     </nav>
+    <div class="container-fluid">
+      <span class="navbar-text text-muted">
+        Rannsaich Dìomhaireachd na h-Alba
+      </span>
+      <a class="btn btn-primary" href="{% url 'login' %}" role="button"
+        >Log In</a
+      >
+    </div>
 
     <main class="flex-shrink-0 main-bg">
-
-        {% block content %}
-        <!-- Content Goes here -->
-        {% endblock content %}
-
+      {% block content %}
+      <!-- Content Goes here -->
+      {% endblock content %}
     </main>
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Created By Jamie Connell</p>
-        <p class="m-0 text-center text-white">Student of CodeInstitiue 2024</p>
-        <!--<p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+      <p class="m-0 text-center text-white">Created By Jamie Connell</p>
+      <p class="m-0 text-center text-white">Student of CodeInstitiue 2024</p>
+      <!--<p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
             <i class="fab fa-youtube-square ms-3"></i>
         </p> -->
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
