login.html(fix issue so that input fields are present)

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,16 +1,19 @@
-{% extends "base.html" %}
-
-{% block content %}
-<class="form-container">
-    <div class="form-wrapper">
-        <h2>Login</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ login_form.as_p }}
-            <button type="submit" name="login">Login</button>
-            <h6>Do not have an account? Please us our <a class="nav-link {% if request.path == '/signup' %}active{% endif %}" href="{% url 'signup' %}">signup-form</a></h6>
-        </form>
-        </form>
-    </div>
-</class>
+{% extends "base.html" %} {% block content %}
+<div class="form-container">
+  <div class="form-wrapper">
+    <h2>Login</h2>
+    <form method="post">
+      {% csrf_token %} {{ login_form.as_p }}
+      <button type="submit" name="login">Login</button>
+      <h6>
+        Do not have an account? Please use our
+        <a
+          class="nav-link {% if request.path == '/signup' %}active{% endif %}"
+          href="{% url 'signup' %}"
+          >signup form</a
+        >
+      </h6>
+    </form>
+  </div>
+</div>
 {% endblock %}
