--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,13 @@
                 <li><a class="dropdown-item" href="#">Tayside & Central</a></li>
               </ul>
             </li>
+             <li class="nav-item">
+              <a
+                class="nav-link {% # %}"
+                href="#"
+                >Favourites</a
+              >
+          </ul>
           </ul>
         </div>
       </div>
