--- a/templates/base.html
+++ b/templates/base.html
@@ -88,27 +88,29 @@
                 <li><a class="dropdown-item" href="#">Tayside & Central</a></li>
               </ul>
             </li>
-             <li class="nav-item">
-              <a
-                class="nav-link {% # %}"
-                href="#"
-                >Favourites</a
-              >
-          </ul>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid d-flex flex-column align-items-end">
       <span class="navbar-text text-muted">
         Rannsaich Dìomhaireachd na h-Alba
       </span>
-      <a class="btn btn-primary" href="{% url 'login' %}" role="button"
-        >Log In</a
-      >
+      {% if request.user.is_authenticated %}
+        <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Log Out</a>
+      {% else %}
+        <a class="btn btn-primary {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}" role="button">Log In</a>
+      {% endif %}
     </div>
 
     <main class="flex-shrink-0 main-bg">
+      {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+        {% endfor %}
+    </div>
+  {% endif %}
       {% block content %}
       <!-- Content Goes here -->
       {% endblock content %}
@@ -125,10 +127,22 @@
         </p> -->
     </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+{% if messages %}
+    <div id="message" style="display: none;">
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+{% endif %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+  crossorigin="anonymous"
+></script>
+<script src="{% static 'script.js' %}"></script>
+
   </body>
 </html>
