--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+
+{% block content %}
 <div class="form-container">
   <div class="form-wrapper">
     <h2>Login</h2>
