--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"
-          ><span>Scottish Gems </span></a
-        >
+        <a class="navbar-brand" href="{% url 'home' %}"><span>Scottish Gems </span></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -88,6 +86,9 @@
                 <li><a class="dropdown-item" href="#">Tayside & Central</a></li>
               </ul>
             </li>
+            <li>{% if request.user.is_authenticated %}
+              <a class="nav-link" id="navbar-text" href="{% url 'favorites' %}">Favorites</a></li>
+              {% endif %}
           </ul>
         </div>
       </div>
@@ -97,7 +98,8 @@
         Rannsaich Dìomhaireachd na h-Alba
       </span>
       {% if request.user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Log Out</a>
+        <a id="logout-link" class="btn btn-primary" href="{% url 'logout' %}" role="button">Log Out</a>
+        
       {% else %}
         <a class="btn btn-primary {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}" role="button">Log In</a>
       {% endif %}
@@ -120,11 +122,6 @@
     <footer class="footer mt-auto py-3 dark-bg">
       <p class="m-0 text-center text-white">Created By Jamie Connell</p>
       <p class="m-0 text-center text-white">Student of CodeInstitiue 2024</p>
-      <!--<p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
-        </p> -->
     </footer>
 
 {% if messages %}
@@ -143,6 +140,18 @@
   crossorigin="anonymous"
 ></script>
 <script src="{% static 'script.js' %}"></script>
+
+<script>
+    var logoutLink = document.getElementById('logout-link');
+    if (logoutLink) {
+        logoutLink.addEventListener('click', function(e) {
+            var confirmLogout = confirm('Are you sure you want to log out?');
+            if (!confirmLogout) {
+                e.preventDefault();
+            }
+        });
+    }
+</script>
 
   </body>
 </html>
