--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,7 @@
             </li>
             <li>{% if request.user.is_authenticated %}
               <a class="nav-link" id="navbar-text" href="{% url 'favorites' %}">Favorites</a></li>
+              <a class="nav-link" id="navbar-text" href="{% url 'create_gems' %}">Share your Gem</a> 
               {% endif %}
           </ul>
         </div>
@@ -114,7 +115,16 @@
     </div>
   {% endif %}
       {% block content %}
-      <!-- Content Goes here -->
+      
+      {% for post in posts %}
+      <h2>{{ post.title }}</h2>
+      {% if post.image %}
+      <img src="{{ post.image.url }}" alt="{{ post.title }}">
+      {% endif %}
+      <p>Author: {{ post.author.username }}</p>
+      <p>Gem Description: {{post.content}}</p>
+      {% endfor %}
+
       {% endblock content %}
     </main>
 
