--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
         {% for post in posts %}
           <div class="col-lg-3 mb-3 border p-3">
             <!-- Display the post -->
-            <h2>{{ post.title }}</h2>
+            <h2><a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a></h2>
             {% if post.image %}
               <img src="{{ post.image.url }}" alt="{{ post.title }}">
             {% endif %}
