--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,49 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   </head>
+  <header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{% static 'images/dinasaur.webp' %}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{% static 'images/highland_cow.webp' %}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{% static 'images/food_image.webp' %}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-caption d-none d-md-block">
+          <div class="page-title">
+            <h1><a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Scottish Gems</a></h1>
+          </div>
+          <div class="page-sub-title">
+            <h5>Faigh a-mach fìor sheudan na h-Alba</h5>
+            <p>(Discover Scotlands true gems)</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </header>
 
   <body class="d-flex flex-column h-100 main-bg">
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"><span>Scottish Gems </span></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -76,7 +112,7 @@
               >
                 Region Selection
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
                 {% for region in regions %}
                   <li>
                     <a class="dropdown-item" href="{% url 'posts_by_region' region.id %}">{{ region.name }}</a>
@@ -108,12 +144,12 @@
         {% endfor %}
     </div>
   {% endif %}
+  <div class="posts-container">
   {% block content %}
-      
-      <div class="row g-3">
+      <div class="row g-3 post-row" >
       {% if region_selected %}
         {% for post in posts %}
-          <div class="col-lg-3 mb-3 border p-3">
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3">
             <!-- Display the post -->
             <h2>{{ post.title }}</h2>
             {% if post.image %}
@@ -141,8 +177,9 @@
           </div>
         {% endfor %}
       {% else %}
+      <div class="row g-3 post-row  justify-content-center">
         {% for post in posts %}
-          <div class="col-lg-3 mb-3 border p-3">
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
             <!-- Display the post -->
             <h2><a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a></h2>
             {% if post.image %}
@@ -172,8 +209,9 @@
         {% endfor %}
       {% endif %}
       </div>
-    
+    </div>  
       {% endblock content %}
+    </div>
     </main>
 
     </main>
@@ -194,8 +232,7 @@
 
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
   crossorigin="anonymous"
 ></script>
