base.html( add more style to html file)

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
         <div class="carousel-item">
           <img src="{% static 'images/food_image.webp' %}" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption">
           <div class="page-title">
             <h1><a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Scottish Gems</a></h1>
           </div>
