--- a/templates/base.html
+++ b/templates/base.html
@@ -5,259 +5,103 @@
   <head>
     <title>Scottish Gems</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Google Fonts CSS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <!-- Include CSS files -->
+    {% include 'partials/css.html' %}
   </head>
-  <header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="{% static 'images/dinasaur.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="{% static 'images/highland_cow.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="{% static 'images/food_image.webp' %}" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-caption">
-          <div class="page-title">
-            <h1><a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Scottish Gems</a></h1>
-          </div>
-          <div class="page-sub-title">
-            <h5>Faigh a-mach fìor sheudan na h-Alba</h5>
-            <p>(Discover Scotlands true gems)</p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </header>
-
   <body class="d-flex flex-column h-100 main-bg">
-    <!-- Navigation -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-blue custom-navbar">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link {% if request.path == home_url %}active{% endif %}"
-                aria-current="page"
-                href="{% url 'home' %}"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Region Selection
-              </a>
-              <ul class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                {% for region in regions %}
-                  <li>
-                    <a class="dropdown-item" href="{% url 'posts_by_region' region.id %}">{{ region.name }}</a>
-                  </li>
-                {% endfor %}
-              </ul>
-            </li>
-            <li>{% if request.user.is_authenticated %}
-              <a class="nav-link" id="navbar-text" href="{% url 'favorites' %}">Favorites</a></li>
-              <a class="nav-link" id="navbar-text" href="{% url 'create_gems' %}">Share your Gem</a> 
-              {% endif %}
-          </ul>
-          <div class="ms-auto">
-            {% if request.user.is_authenticated %}
-              <a id="logout-link" class="btn btn-primary" href="{% url 'logout' %}" role="button">Log Out</a>
-            {% else %}
-              <a class="btn btn-primary {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}" role="button">Log In</a>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </nav>
-
+    <!-- Include header -->
+    {% include 'partials/header.html' %}
+    <!-- Include navbar -->
+    {% include 'partials/navbar.html' %}
     <main class="flex-shrink-0 main-bg">
       {% if messages %}
-    <div class="messages">
-        {% for message in messages %}
+        <div class="messages">
+          {% for message in messages %}
             <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
-        {% endfor %}
-    </div>
-  {% endif %}
-
-
-  <div class="posts-container">
-  {% block content %}
-      <div class="row g-3 post-row" >
-      {% if region_selected %}
-        {% for post in posts %}
-          <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3">
-            <!-- Display the post -->
-            <h2>{{ post.title }}</h2>
-            {% if post.image %}
-            <div class="image.container">
-              <img src="{{ post.image.url }}" alt="{{ post.title }}">
-            </div>
-            {% endif %}
-            <p>Author: {{ post.author.username }}</p>
-            <p >Gem Info: {{post.content}}</p>
-            {% if request.user.is_authenticated %}
-              <form method="post" action="{% url 'toggle_favorite' post.id %}">
-                {% csrf_token %}
-                <button type="submit" class="icon-button">
-                  {% if post in request.user.favorite_posts.all %}
-                  <i class="fas fa-heart" title="Remove From Favorites"></i>
-                  {% else %}
-                  <i class="far fa-heart" title="Add to Favorites"></i>
-                  {% endif %}
-              </button>
-                </button>
-                <button type="submit" class="icon-button">
-                  {% if request.user == post.author %}
-                  <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-                      <i class="fas fa-eraser"></i>
-                  </a>
-              {% endif %}
-              </form>
-            {% endif %}
-          </div>
-        {% endfor %}
-      {% else %}
-      <div class="row g-3 post-row  justify-content-center">
-        {% for post in posts %}
-          <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
-            <!-- Display the post -->
-            <h2><a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a></h2>
-            {% if post.image %}
-              <img src="{{ post.image.url }}" alt="{{ post.title }}">
-            {% endif %}
-            <p>Author: {{ post.author.username }}</p>
-            <p class="gem-info">{{post.content}}</p>
-            <a href="{% url 'gem_detail' post.id %}">Show More</a>
-            <br>
-            <p>Region: {{post.region}}</p>
-            {% if request.user.is_authenticated %}
-              <form method="post" action="{% url 'toggle_favorite' post.id %}">
-                {% csrf_token %}
-                <button type="submit" class="icon-button">
-                  {% if post in request.user.favorite_posts.all %}
-                  <i class="fas fa-heart" title="Remove From Favorites"></i>
-                  {% else %}
-                  <i class="far fa-heart" title="Add to Favorites"></i>
-                  {% endif %}
-              </button>
-                <button type="submit" class="icon-button">
-                  {% if request.user == post.author %}
-                  <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-                      <i class="fas fa-eraser"></i>
-                  </a>
-                  {% endif %}
-                </button>
-              </form>
-            {% endif %}
-          </div>
-        {% endfor %}
+          {% endfor %}
+        </div>
       {% endif %}
+      <div class="posts-container">
+        {% block content %}
+        <div class="row g-3 post-row" >
+        {% if region_selected %}
+          {% for post in posts %}
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3">
+              <!-- Display the post -->
+              <h2>{{ post.title }}</h2>
+              {% if post.image %}
+              <div class="image.container">
+                <img src="{{ post.image.url }}" alt="{{ post.title }}">
+              </div>
+              {% endif %}
+              <p>Author: {{ post.author.username }}</p>
+              <p >Gem Info: {{post.content}}</p>
+              {% if request.user.is_authenticated %}
+                <form method="post" action="{% url 'toggle_favorite' post.id %}">
+                  {% csrf_token %}
+                  <button type="submit" class="icon-button">
+                    {% if post in request.user.favorite_posts.all %}
+                    <i class="fas fa-heart" title="Remove From Favorites"></i>
+                    {% else %}
+                    <i class="far fa-heart" title="Add to Favorites"></i>
+                    {% endif %}
+                </button>
+                  </button>
+                  <button type="submit" class="icon-button">
+                    {% if request.user == post.author %}
+                    <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
+                        <i class="fas fa-eraser"></i>
+                    </a>
+                {% endif %}
+                </form>
+              {% endif %}
+            </div>
+          {% endfor %}
+        {% else %}
+        <div class="row g-3 post-row  justify-content-center">
+          {% for post in posts %}
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
+              <!-- Display the post -->
+              <h2><a href = "{%url 'gem_detail' post.id %}">{{ post.title }}</a></h2>
+              {% if post.image %}
+                <img src="{{ post.image.url }}" alt="{{ post.title }}">
+              {% endif %}
+              <p>Author: {{ post.author.username }}</p>
+              <p class="gem-info">{{post.content}}</p>
+              <a href="{% url 'gem_detail' post.id %}">Show More</a>
+              <br>
+              <p>Region: {{post.region}}</p>
+              {% if request.user.is_authenticated %}
+                <form method="post" action="{% url 'toggle_favorite' post.id %}">
+                  {% csrf_token %}
+                  <button type="submit" class="icon-button">
+                    {% if post in request.user.favorite_posts.all %}
+                    <i class="fas fa-heart" title="Remove From Favorites"></i>
+                    {% else %}
+                    <i class="far fa-heart" title="Add to Favorites"></i>
+                    {% endif %}
+                </button>
+                  <button type="submit" class="icon-button">
+                    {% if request.user == post.author %}
+                    <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
+                        <i class="fas fa-eraser"></i>
+                    </a>
+                    {% endif %}
+                  </button>
+                </form>
+              {% endif %}
+            </div>
+          {% endfor %}
+        {% endif %}
+        </div>
+      </div>  
+        {% endblock content %}
       </div>
-    </div>  
-      {% endblock content %}
-    </div>
     </main>
-
-    </main>
-
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-      <p class="m-0 text-center text-white">Created By Jamie Connell</p>
-      <p class="m-0 text-center text-white">Student of CodeInstitiue 2024</p>
-    </footer>
-
-{% if messages %}
-    <div id="message" style="display: none;">
-        {% for message in messages %}
-            {{ message }}
-        {% endfor %}
-    </div>
-{% endif %}
-
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-  crossorigin="anonymous"
-></script>
-
-<script>
-    var logoutLink = document.getElementById('logout-link');
-    if (logoutLink) {
-        logoutLink.addEventListener('click', function(e) {
-            var confirmLogout = confirm('Are you sure you want to log out?');
-            if (!confirmLogout) {
-                e.preventDefault();
-            }
-        });
-    }
-</script>
-{% block extra_js %}{% endblock %}
+    <!-- Include footer -->
+    {% include 'partials/footer.html' %}
+    <!-- Include JavaScript files -->
+    {% include 'partials/js.html' %}
+    {% block extra_js %}{% endblock %}
   </body>
 </html>
