add-gem-form.js( try new approach to achieve desired outcome for user post)

--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -31,6 +31,13 @@
         <button id="cancel-btn">Cancel</button>
     </div>
 
+    <div id="region-selection-container">
+        <label for="region-selection">Select a region:</label>
+        <select id="region-selection">
+            <!-- The options will be populated with JavaScript -->
+        </select>
+    </div>
+
     <!-- Back button -->
     <span id="close-btn"><i class="fa-solid fa-chevron-left"></i></span>
 </main>
