add-gem-form.js( try new approach to achieve desired outcome for user post)

--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -6,8 +6,13 @@
 
 {% block content %}
 
+
+{% block head %}
+<script type="module" src="{% static 'js/place-add-form.js' %}"></script>
+{% endblock head %}
+
 <main class="add-place-page">
-    <h1>Share Your Gem</h1>
+    <h1>Add a Place</h1>
 
     <!-- GOOGLE PLACE SEARCH FIELD -->
 
@@ -23,19 +28,16 @@
         <div class="add-form-img-container">
             <img src="{% static 'images/no-google-photo-placeholder.png' %}" alt="Placeholder image" id="photo">
         </div>
-        <!-- Place details (hidden) -->
-        <h2 class="detail-view-place-title" id="add-form-title">Place Name</h2>
-        <p class="place-address" id="add-form-address"></p>
-        <!-- Buttons -->
-        <button id="share-btn">Share Gem</button>
-        <button id="cancel-btn">Cancel</button>
-    </div>
-
-    <div id="region-selection-container">
-        <label for="region-selection">Select a region:</label>
-        <select id="region-selection">
-            <!-- The options will be populated with JavaScript -->
-        </select>
+        <!-- Form (hidden) -->
+        <form method="post" style="display: none;">{% csrf_token %}
+            {{ form.as_p }}
+            <h2 class="detail-view-place-title" id="add-form-title">Place Name</h2>
+            <p class="place-address" id="add-form-address"></p>
+            <div class="add-place-btns-container">
+                <input type="submit" value="Save" id="place-add-save-btn" class="submit-btn">
+                <a href="{% url 'create_gems' %}" class="cancel-btn">Cancel</a>
+            </div>
+        </form>
     </div>
 
     <!-- Back button -->
